--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -29,11 +29,11 @@
         <div class="container">
         </br>
           <p>
-            <a href="https://www.upwork.com/freelancers/~01f07cc20ff6e4ea13?viewMode=1" class="btn btn-primary my-2" style="background-color:green;margin:5px;">
+            <a href="https://www.upwork.com/freelancers/~01f07cc20ff6e4ea13?viewMode=1" class="btn btn-primary my-2" style="background-color:green;margin:5px;border:none;">
               Upwork
             </a>
             <a href="mailto:gdadapromise@gmail.com" class="btn btn-primary px-4 my-2" style="margin:8px;">Email</a>
-            <a href="https://github.com/pgdada" class="btn btn-primary my-2" style="background-color:black;margin:5px;">GitHub</a>
+            <a href="https://github.com/pgdada" class="btn btn-primary my-2" style="background-color:black;margin:5px;border:none;">GitHub</a>
           </p>
         </div>
       </section>
